--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,14 @@
     <meta name="author" content="nilllzz">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="lightbox.css">
     <link rel="icon" type="image/ico" href="favicon.ico" />
 </head>
 
 <body>
+    <script lang="js" src="config.js"></script>
+
     <div class="polkadot-bg">
         <div class="polkadot-bg-inner"></div>
     </div>
@@ -23,7 +27,7 @@
                 <div class="card card-sticky">
                     <div class="pfp-img-container">
                         <div class="center-image">
-                            <img src="img/pfp.png" class="pfp-img bounce" alt="Profile picture" />
+                            <img src="img/pfp.png" class="pfp-img bounce-hover bounce-active" alt="Profile picture" />
                         </div>
                         <img src="img/surprised.png" class="pfp-img-surprised" />
                     </div>
@@ -35,11 +39,7 @@
                     <hr />
 
                     <div>
-                        <p aria-label="Bio">
-                            I draw furry art, trying to make a comic but have lack motivation into starting it, I like
-                            watching
-                            YouTube tho
-                        </p>
+                        <p aria-label="Bio" id="bio">...</p>
                         <div>
                             <i class="bi bi-globe-americas"></i> United States
                         </div>
@@ -49,16 +49,17 @@
                     <hr />
 
                     <div class="social-icons">
-                        <a class="social-icon bounce social-icon-discord" href="https://discord.com"
+                        <a class="social-icon bounce-hover social-icon-discord" href="https://discord.com"
                             aria-label="Discord link button" title="Discord">
                             <i class="bi bi-discord"></i>
                         </a>
-                        <a class="social-icon bounce social-icon-twitter" href="https://x.com/bobbycat25?s=20"
+                        <a class="social-icon bounce-hover social-icon-twitter" href="https://x.com/bobbycat25?s=20"
                             aria-label="Twitter link button" title="Twitter/X">
                             <i class="bi bi-twitter-x"></i>
                         </a>
-                        <a class="social-icon bounce social-icon-artistcrow" href="https://artistcrow.com/juliandough"
-                            aria-label="Artistcrow link button" title="Artistcrow">
+                        <a class="social-icon bounce-hover social-icon-artistcrow"
+                            href="https://artistcrow.com/juliandough" aria-label="Artistcrow link button"
+                            title="Artistcrow">
                             <i class="bi bi-brush-fill"></i>
                         </a>
                     </div>
@@ -67,11 +68,11 @@
             <div class="col col-data">
                 <div class="card">
                     <div class="commission-status-label">
-                        My commission status is
+                        My commissions are currently
                     </div>
                     <div>
-                        <div class="warning-message">
-                            <span class="warning-text">
+                        <div class="warning-message hidden" id="commission-indicator-open">
+                            <a class="warning-text" href="#section-commission-tutorial">
                                 <span class="scroll-text-container">
                                     <span class="scroll-text-content">▶<br />▶</span>
                                 </span>
@@ -79,7 +80,14 @@
                                 <span class="scroll-text-container">
                                     <span class="scroll-text-content scroll-text-content-invert">◀<br />◀</span>
                                 </span>
-                            </span>
+                            </a>
+                        </div>
+                        <div class="warning-message warning-message-error hidden" id="commission-indicator-closed">
+                            <a class="warning-text" href="#section-commission-tutorial">
+                                <span>!</span>
+                                <span>CLOSED</span>
+                                <span>!</span>
+                            </a>
                         </div>
                     </div>
 
@@ -87,10 +95,16 @@
                         <div class="portfolio-preview" id="portfolio-preview-container">
                         </div>
                     </div>
+                    <div class="portfolio-preview-link">
+                        <a href="gallery.html">
+                            <i class="bi bi-images"></i>
+                            View full gallery
+                        </a>
+                    </div>
 
                     <hr />
 
-                    <details>
+                    <details open="" id="section-commission-tutorial">
                         <summary>
                             <h2>How to commission me</h2>
                         </summary>
@@ -101,23 +115,12 @@
 
                     <hr />
 
-                    <details>
+                    <details open="">
                         <summary>
                             <h2>Commission conditions</h2>
                         </summary>
                         <div>
                             There has to be a maid dress.
-                        </div>
-                    </details>
-
-                    <hr />
-
-                    <details>
-                        <summary>
-                            <h2>License</h2>
-                        </summary>
-                        <div>
-                            I own you
                         </div>
                     </details>
 
@@ -134,11 +137,22 @@
 
                     <hr />
 
+                    <details>
+                        <summary>
+                            <h2>License</h2>
+                        </summary>
+                        <div>
+                            I own you
+                        </div>
+                    </details>
+
+                    <hr />
+
                     <p>Link to queue</p>
                     <p>Larger categorized gallery</p>
 
                     <div class="copyright-footer">
-                        Copyright © <span id="copyright-year">2024</span> Julian Dough
+                        <span id="copyright">Copyright © 2024 Julian Dough</span>
                     </div>
                 </div>
             </div>
@@ -147,25 +161,27 @@
 
     <div class="lightbox" id="lightbox" style="display: none;">
         <div class="lightbox-controls">
-            <span class="lightbox-control-button" onclick="closeLightbox()">
+            <span class="lightbox-control-button" onclick="closeLightbox()" role="button" aria-label="Close gallery"
+                title="Close (Esc)">
                 <i class="bi bi-x-lg"></i>
             </span>
         </div>
 
         <div class="lightbox-img-controls">
-            <span class="lightbox-control-button" onclick="navigateLightbox(-1)">
+            <span class="lightbox-control-button" onclick="navigateLightbox(-1)" aria-label="Previous gallery image">
                 <i class="bi bi-caret-left-fill"></i>
             </span>
             <div id="lightbox-img-container">
                 <!-- Lightbox image insert here -->
             </div>
-            <span class="lightbox-control-button" onclick="navigateLightbox(1)">
+            <span class="lightbox-control-button" onclick="navigateLightbox(1)" aria-label="Next gallery image">
                 <i class="bi bi-caret-right-fill"></i>
             </span>
         </div>
     </div>
 
     <script src="index.js" lang="js"></script>
+    <script src="lightbox.js" lang="js"></script>
 
 </body>
 
